--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
     <meta charset="utf-8">
-    <title>AG</title>
+    <title>AG validator</title>
 <!--    <link rel="stylesheet" href="style.css">
     <script src="script.js"></script> -->
   </head>
