--- a/index.html
+++ b/index.html
@@ -26,7 +26,8 @@
   <body>
 	<p>vote <a href="https://explorer.celo.org/address/0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b/celo" target="_blank">0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b</a> for 6% APR</p>
 
-	<p>contact me: <a href="https://t.me/AGx10000">@AGx10000</a></p>
+	<p>telegram: <a href="https://t.me/AGx10000">@AGx10000</a></p>
+	<p>email: <a href="mailto:agx10k@protonmail.com">agx10k@protonmail.com</a></p>
 </body>
 </html>
 
