--- a/index.html
+++ b/index.html
@@ -24,6 +24,7 @@
     <script src="script.js"></script> -->
   </head>
   <body>
+  	<h1>AG &mdash; Celo validator Group</h1>
 	<p>vote <a href="https://explorer.celo.org/address/0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b/celo" target="_blank">0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b</a> for 6% APR</p>
 
 	<p>telegram: <a href="https://t.me/AGx10000">@AGx10000</a></p>
