hello@validator.ag

--- a/index.html
+++ b/index.html
@@ -88,7 +88,7 @@
 
 	<p>about: Soon</p>
 	<p>telegram: <a href="https://t.me/AGx10000">@AGx10000</a></p>
-	<p>email: <a href="mailto:agx10k@protonmail.com">agx10k@protonmail.com</a></p>
-	<p>riot: @agx10000:matrix.org</p>
+	<p>email: <a href="mailto:hello@validator.ag">hello@validator.ag</a></p>
+	<p>element: @agx10000:matrix.org</p>
 </body>
 </html>
