--- a/index.html
+++ b/index.html
@@ -61,6 +61,11 @@
 	    <td>3%</td>
 	  </tr>
 	  <tr>
+	    <td><img alt="The Graph" title="The Graph" src="logos/thegraph.jpg"/></td>
+	    <td>The Graph - Soon</td>
+	    <td>&nbsp;</td>
+	  </tr>
+	  <tr>
 	    <td><img alt="Solana" title="Solana" src="logos/solana.svg"/></td>
 	    <td>F5b1wSUtpaYDnpjLQonCZC7iyFvizLcNqTactZbwSEXK</td>
 	    <td>1%</td>
@@ -80,13 +85,6 @@
 	    <td>1%</td>
 	  </tr>
 	  <tr>
-	    <td><img alt="Stafi" title="Stafi" src="logos/stafi.png"/></td>
-	    <td>
-	    	<a href="https://stafi.subscan.io/account/34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk" target="_blank">34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk</a>
-	    </td>
-	    <td>10%</td>
-	  </tr>
-	  <tr>
 	    <td>
 	    	<img alt="Centrifuge" title="Centrifuge" src="logos/centrifuge.svg">
 	    </td>
@@ -94,6 +92,13 @@
   	    	<a href="https://centrifuge.subscan.io/account/4caJd46Fn2Fva4DRP5QfxiJEzLWGcbZ4QuE53ri9PWWBFS7Z" target="_blank">4caJd46Fn2Fva4DRP5QfxiJEzLWGcbZ4QuE53ri9PWWBFS7Z</a>
   	    </td>
   	    <td>8%</td>
+	  </tr>
+	  <tr>
+	    <td><img alt="Stafi" title="Stafi" src="logos/stafi.png"/></td>
+	    <td>
+	    	<a href="https://stafi.subscan.io/account/34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk" target="_blank">34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk</a>
+	    </td>
+	    <td>10%</td>
 	  </tr>
 	</tbody>
 	</table>
