--- a/index.html
+++ b/index.html
@@ -51,13 +51,17 @@
 	  <tr>
 	    <td><img alt="Celo" title="Celo" src="logos/celo.svg"/></td>
 	    <td>
-	    	vote <a href="https://explorer.celo.org/address/0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b/celo" target="_blank">0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b</a> for max APR (100% validator score since genesis block)
+	    	<p>Group <a href="https://explorer.celo.org/address/0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b/celo" target=" _blank">0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b</a> has maximum possible network APY because of 100%🔥 effective validator score since genesis block.</p>
+	    	<p>&laquo;<a href="https://docs.celo.org/celo-owner-guide/quick-start#vote-for-a-validator-group" target="_blank">Vote for a Validator Group</a>&raquo; @ docs.celo.org</p>
 	    </td>
-	    <td>&mdash;</td>
+	    <td>0%🔥 fees per protocol design</td>
 	  </tr>
 	  <tr>
 	    <td><img alt="Polkadot" title="Polkadot" src="logos/polkadot.svg"/></td>
-	    <td>13ujCsf3t2YAdAhcpcEFVoJAPRYzMLHUHEnLroQp41sJCSnm</td>
+	    <td>
+	    	<p>Include 13ujCsf3t2YAdAhcpcEFVoJAPRYzMLHUHEnLroQp41sJCSnm to the list of you nominations.</p>
+	    	<p>&laquo;<a href="https://wiki.polkadot.network/docs/en/maintain-guides-how-to-nominate-polkadot#step-2-nominate-a-validator" target="_blank">Nominate a validator</a>&raquo; @ wiki.polkadot.network</p>
+	    </td>
 	    <td>3%</td>
 	  </tr>
 	  <tr>
@@ -67,22 +71,26 @@
 	  </tr>
 	  <tr>
 	    <td><img alt="Solana" title="Solana" src="logos/solana.svg"/></td>
-	    <td>F5b1wSUtpaYDnpjLQonCZC7iyFvizLcNqTactZbwSEXK</td>
-	    <td>1%</td>
+	    <td>
+		    <p>Delegate your stake to vote account F5b1wSUtpaYDnpjLQonCZC7iyFvizLcNqTactZbwSEXK</p>
+		    <p>&laquo;<a href="https://docs.solana.com/staking#how-do-i-stake-my-sol-tokens">How do I stake my SOL tokens?</a>&raquo; @ docs.solana.com</p>
+		</td>
+	    <td>1%🔥</td>
 	  </tr>
 	  <tr>
 	    <td><img alt="Kusama" title="Kusama" src="logos/kusama.svg"/></td>
 	    <td>
-	    	<a href="https://kusama.subscan.io/account/DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao" target="_blank">DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao</a>
+	    	<p>Include <a href="https://kusama.subscan.io/account/DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao" target="_blank">DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao</a>, <a href="https://kusama.subscan.io/account/FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih" target="_blank">FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih</a> to the list of you nominations.</p>
+	    	<p>&laquo;<a href="https://wiki.polkadot.network/docs/en/maintain-guides-how-to-nominate-polkadot#step-2-nominate-a-validator" target="_blank">Nominate a validator</a>&raquo; @ wiki.polkadot.network</p>
 	    </td>
-	    <td>1%</td>
+	    <td>1%🔥</td>
 	  </tr>
 	  <tr>
-	    <td><img alt="Kusama" title="Kusama" src="logos/kusama.svg"/></td>
+	    <td><img alt="Stafi" title="Stafi" src="logos/stafi.png"/></td>
 	    <td>
-	    	<a href="https://kusama.subscan.io/account/FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih" target="_blank">FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih</a>
+	    	<a href="https://stafi.subscan.io/account/34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk" target="_blank">34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk</a>
 	    </td>
-	    <td>1%</td>
+	    <td>10%</td>
 	  </tr>
 	  <tr>
 	    <td>
@@ -92,13 +100,6 @@
   	    	<a href="https://centrifuge.subscan.io/account/4caJd46Fn2Fva4DRP5QfxiJEzLWGcbZ4QuE53ri9PWWBFS7Z" target="_blank">4caJd46Fn2Fva4DRP5QfxiJEzLWGcbZ4QuE53ri9PWWBFS7Z</a>
   	    </td>
   	    <td>8%</td>
-	  </tr>
-	  <tr>
-	    <td><img alt="Stafi" title="Stafi" src="logos/stafi.png"/></td>
-	    <td>
-	    	<a href="https://stafi.subscan.io/account/34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk" target="_blank">34eVFpCtKinxvKhVhDpGtwuHv5N851BtMhdiJCYZku8rdsPk</a>
-	    </td>
-	    <td>10%</td>
 	  </tr>
 	</tbody>
 	</table>
