--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
 	<meta name="msapplication-TileColor" content="#ffffff">
 	<meta name="msapplication-TileImage" content="/favicons/ms-icon-144x144.png">
 	<meta name="theme-color" content="#ffffff">
-    <title>AG &mdash; professional staking</title>
+    <title>AG staking: high returns, low downtimes</title>
 	<style>
 	table {
 	  font-family: arial, sans-serif;
@@ -38,7 +38,12 @@
 	</style>
   </head>
   <body>
-  	<h1>AG &mdash; professional staking</h1>
+  	<h1>AG staking: high returns, low downtimes</h1>
+  	<ul>
+  		<li>Increase decentralisation of young networks</li>
+  		<li>Achieve excellence in producing blocks</li>
+  		<li>Provide high returns for stakers</li>
+  	</ul>
 	<table>
 	<thead>
 	  <tr>
@@ -104,7 +109,6 @@
 	</tbody>
 	</table>
 
-	<p>about: Soon</p>
 	<p>telegram: <a href="https://t.me/AGx10000">@AGx10000</a></p>
 	<p>email: <a href="mailto:hello@validator.ag">hello@validator.ag</a></p>
 	<p>element: @agx10000:matrix.org</p>
