CELO epoch 286 incident

--- a/index.html
+++ b/index.html
@@ -56,7 +56,7 @@
 	  <tr>
 	    <td><img alt="Celo" title="Celo" src="logos/celo.svg"/></td>
 	    <td>
-	    	<p>Group <a href="https://explorer.celo.org/address/0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b/celo" target=" _blank">0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b</a> has maximum possible network APY because of 100%🔥 effective validator score since genesis block.</p>
+	    	<p>Group <a href="https://explorer.celo.org/address/0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b/celo" target=" _blank">0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b</a> had no downtimes since genesis until epoch's 286 block 4930593 at which 23-block (less than 2 minutes) downtime occured due to DC network error.</p>
 	    	<p>&laquo;<a href="https://docs.celo.org/celo-owner-guide/quick-start#vote-for-a-validator-group" target="_blank">Vote for a Validator Group</a>&raquo; @ docs.celo.org</p>
 	    </td>
 	    <td>0%🔥 fees per protocol design</td>
