--- a/index.html
+++ b/index.html
@@ -57,6 +57,7 @@
 	    <td><img alt="Celo" title="Celo" src="logos/celo.svg"/></td>
 	    <td>
 	    	<p>Group <a href="https://explorer.celo.org/address/0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b/celo" target=" _blank">0x15Ed3f6b79F5Fb9Ef1D99D37314Dd626b3005F0b</a> had no downtimes since genesis until epoch's 286 block 4930593 at which 23-block (less than 2 minutes) downtime occured due to DC network error.</p>
+		<p>1st to hit <a href="https://github.com/celo-org/celo-monorepo/issues/6453" target="_blank">validator score 0.9999999999919</a> and the only one to do it since genesis</p>    
 	    	<p>&laquo;<a href="https://docs.celo.org/celo-owner-guide/quick-start#vote-for-a-validator-group" target="_blank">Vote for a Validator Group</a>&raquo; @ docs.celo.org</p>
 	    </td>
 	    <td>0%🔥 fees per protocol design</td>
