Kusama validator stats

--- a/index.html
+++ b/index.html
@@ -86,7 +86,7 @@
 	  <tr>
 	    <td><img alt="Kusama" title="Kusama" src="logos/kusama.svg"/></td>
 	    <td>
-	    	<p>Include <a href="https://kusama.subscan.io/account/DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao" target="_blank">DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao</a>, <a href="https://kusama.subscan.io/account/FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih" target="_blank">FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih</a> to the list of you nominations.</p>
+	    	<p>Include validators AGx1 <a href="https://polkadot.js.org/apps/?rpc=wss%3A%2F%2Fkusama-rpc.polkadot.io#/staking/query/DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao" target="_blank" title="AGx1 validator stats">DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao</a>, AGx2 <a href="https://polkadot.js.org/apps/?rpc=wss%3A%2F%2Fkusama-rpc.polkadot.io#/staking/query/FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih" target="_blank" title="AGx2 validator stats">FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih</a> to the list of you nominations.</p>
 	    	<p>&laquo;<a href="https://wiki.polkadot.network/docs/en/maintain-guides-how-to-nominate-polkadot#step-2-nominate-a-validator" target="_blank">Nominate a validator</a>&raquo; @ wiki.polkadot.network</p>
 	    </td>
 	    <td>3%</td>
