--- a/index.html
+++ b/index.html
@@ -110,6 +110,17 @@
 	</tbody>
 	</table>
 
+
+	<h2>Tech</h2>
+  	<ul>
+  		<li>1 instance = 1 task</li>
+  		<li>monitoring + alerting</li>
+  		<li>do not trust, verify</li>
+  	</ul>
+
+
+	<h2>Contact</h2>
+
 	<p>telegram: <a href="https://t.me/AGx10000">@AGx10000</a></p>
 	<p>email: <a href="mailto:hello@validator.ag">hello@validator.ag</a></p>
 	<p>element: @agx10000:matrix.org</p>
