--- a/index.html
+++ b/index.html
@@ -65,14 +65,14 @@
 	  <tr>
 	    <td><img alt="Polkadot" title="Polkadot" src="logos/polkadot.svg"/></td>
 	    <td>
-	    	<p>Include 13ujCsf3t2YAdAhcpcEFVoJAPRYzMLHUHEnLroQp41sJCSnm to the list of you nominations.</p>
+	    	<p>Include <a href="https://polkadot.js.org/apps/?rpc=wss%3A%2F%2Frpc.polkadot.io#/staking/query/13ujCsf3t2YAdAhcpcEFVoJAPRYzMLHUHEnLroQp41sJCSnm" target="_blank" title="AG validator stats">13ujCsf3t2YAdAhcpcEFVoJAPRYzMLHUHEnLroQp41sJCSnm</a> to the list of you nominations.</p>
 	    	<p>&laquo;<a href="https://wiki.polkadot.network/docs/en/maintain-guides-how-to-nominate-polkadot#step-2-nominate-a-validator" target="_blank">Nominate a validator</a>&raquo; @ wiki.polkadot.network</p>
 	    </td>
 	    <td>3%</td>
 	  </tr>
 	  <tr>
 	    <td><img alt="The Graph" title="The Graph" src="logos/thegraph.jpg"/></td>
-	    <td>The Graph - Soon</td>
+	    <td>Currently the indexer is running private (100% fees). This will change soon (tm)</td>
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
@@ -80,13 +80,14 @@
 	    <td>
 		    <p>Delegate your stake to vote account F5b1wSUtpaYDnpjLQonCZC7iyFvizLcNqTactZbwSEXK</p>
 		    <p>&laquo;<a href="https://docs.solana.com/staking#how-do-i-stake-my-sol-tokens">How do I stake my SOL tokens?</a>&raquo; @ docs.solana.com</p>
+		    <p>History of block/slot/skip slot at <a href="https://www.validators.app/validators/mainnet/G2TBEh2ahNGS9tGnuBNyDduNjyfUtGhMcssgRb8b6KfH" target="_blank">validators.app</a></p>
 		</td>
 	    <td>1%🔥</td>
 	  </tr>
 	  <tr>
 	    <td><img alt="Kusama" title="Kusama" src="logos/kusama.svg"/></td>
 	    <td>
-	    	<p>Include validators AGx1 <a href="https://polkadot.js.org/apps/?rpc=wss%3A%2F%2Fkusama-rpc.polkadot.io#/staking/query/DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao" target="_blank" title="AGx1 validator stats">DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao</a>, AGx2 <a href="https://polkadot.js.org/apps/?rpc=wss%3A%2F%2Fkusama-rpc.polkadot.io#/staking/query/FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih" target="_blank" title="AGx2 validator stats">FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih</a> to the list of you nominations.</p>
+	    	<p>Include validators AG <a href="https://polkadot.js.org/apps/?rpc=wss%3A%2F%2Fkusama-rpc.polkadot.io#/staking/query/DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao" target="_blank" title="AG validator stats">DVasGX5qBMrCwNM8SnLyFrRpeniAwAsWe2noN6jPdx1jjao</a>, AG/2 <a href="https://polkadot.js.org/apps/?rpc=wss%3A%2F%2Fkusama-rpc.polkadot.io#/staking/query/FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih" target="_blank" title="AG/2 validator stats">FWxYu7XrMuCvKqyKQntmDsKgAtgYHa2KHiS3tijcLwyjnih</a> to the list of you nominations.</p>
 	    	<p>&laquo;<a href="https://wiki.polkadot.network/docs/en/maintain-guides-how-to-nominate-polkadot#step-2-nominate-a-validator" target="_blank">Nominate a validator</a>&raquo; @ wiki.polkadot.network</p>
 	    </td>
 	    <td>3%</td>
@@ -124,5 +125,8 @@
 	<p>telegram: <a href="https://t.me/AGx10000">@AGx10000</a></p>
 	<p>email: <a href="mailto:hello@validator.ag">hello@validator.ag</a></p>
 	<p>element: @agx10000:matrix.org</p>
+
+	<p>repo of this webpage: <a href="https://github.com/AGx10k/AGx10k.github.io" target="_blank">github.com/AGx10k/AGx10k.github.io</a> (to check changes or even subscribe to fees updates)</p>
+	 
 </body>
 </html>
