Solana 🔥 Hot Summer 🌞 = 0%

--- a/index.html
+++ b/index.html
@@ -82,7 +82,7 @@
 		    <p>&laquo;<a href="https://docs.solana.com/staking#how-do-i-stake-my-sol-tokens">How do I stake my SOL tokens?</a>&raquo; @ docs.solana.com</p>
 		    <p>History of block/slot/skip slot at <a href="https://www.validators.app/validators/mainnet/G2TBEh2ahNGS9tGnuBNyDduNjyfUtGhMcssgRb8b6KfH" target="_blank">validators.app</a></p>
 		</td>
-	    <td><s>1%</s><br/>0% 🔥🔥🔥 until June</td>
+	    <td><s>1%</s><br/>0% = 🔥 Hot Summer 🌞</td>
 	  </tr>
 	  <tr>
 	    <td><img alt="Kusama" title="Kusama" src="logos/kusama.svg"/></td>
