--- a/index.html
+++ b/index.html
@@ -60,7 +60,7 @@
 		<p>1st to hit <a href="https://github.com/celo-org/celo-monorepo/issues/6453" target="_blank">validator score 0.9999999999919</a> and the only one to do it since genesis</p>    
 	    	<p>&laquo;<a href="https://docs.celo.org/celo-owner-guide/quick-start#vote-for-a-validator-group" target="_blank">Vote for a Validator Group</a>&raquo; @ docs.celo.org</p>
 	    </td>
-	    <td>0%🔥 fees per protocol design</td>
+	    <td>0%🔥 per protocol design</td>
 	  </tr>
 	  <tr>
 	    <td><img alt="Polkadot" title="Polkadot" src="logos/polkadot.svg"/></td>
@@ -82,7 +82,7 @@
 		    <p>&laquo;<a href="https://docs.solana.com/staking#how-do-i-stake-my-sol-tokens">How do I stake my SOL tokens?</a>&raquo; @ docs.solana.com</p>
 		    <p>History of block/slot/skip slot at <a href="https://www.validators.app/validators/mainnet/G2TBEh2ahNGS9tGnuBNyDduNjyfUtGhMcssgRb8b6KfH" target="_blank">validators.app</a></p>
 		</td>
-	    <td><s>1%</s><br/>0% = 🔥 Hot Summer 🌞</td>
+	    <td>0% 🔥<br/>until further notices (will announce at least 1 month before)</td>
 	  </tr>
 	  <tr>
 	    <td><img alt="Kusama" title="Kusama" src="logos/kusama.svg"/></td>
