update Solana logo

--- a/index.html
+++ b/index.html
@@ -76,7 +76,7 @@
 	    <td>&nbsp;</td>
 	  </tr>
 	  <tr>
-	    <td><img alt="Solana" title="Solana" src="logos/solana.svg"/></td>
+	    <td><img alt="Solana" title="Solana" src="logos/solanaWordMark.svg"/></td>
 	    <td>
 		    <p>Delegate your stake to vote account F5b1wSUtpaYDnpjLQonCZC7iyFvizLcNqTactZbwSEXK</p>
 		    <p>&laquo;<a href="https://docs.solana.com/staking#how-do-i-stake-my-sol-tokens">How do I stake my SOL tokens?</a>&raquo; @ docs.solana.com</p>
